--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,29 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <nav class="navbar navbar-default navbar-static-top" id='navbar-slick' role="navigation">
 
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src='images/nihon-logo.png'></img></a>
+        </div>
+    
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Blog</a></li>
+            <li><a href="#/about">About</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
       <div ng-view=""></div>
 
       <div class="footer"> 
@@ -76,6 +98,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/editor.js"></script>
         <!-- endbuild -->
 </body>
 </html>
