--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-      <div ng-view=""></div>
+      <div style='min-height:100%' ng-view=""></div>
 
       <div class="footer"> 
 
