Added the ScotLug logo to the repository

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic|Open+Sans:300italic,300' rel='stylesheet' type='text/css'>
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
@@ -32,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src='images/nihon-logo.png'></img></a>
+          <a class="navbar-brand" href="#"><img src='images/scotlug-logo.png'></img></a>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
